mesa (7.10-1) UNRELEASED; urgency=low

  * New upstream release.
  * Add patch: 10-fix-talloc-linking.diff

 -- Cyril Brulebois <kibi@debian.org>  Sat, 22 Jan 2011 03:14:03 +0000

mesa (7.9+repack-2) experimental; urgency=low

  [ Cyril Brulebois ]
  * Specify PASV in watch file, and mangle +repack.

  [ Christopher James Halse Rogers ]
  * debian/control:
    - Add libudev-dev to build-depends.  This is required for the DRI2 EGL
      driver to work with a drm display.

  [ Sven Joachim ]
  * Update for the latest libdrm-nouveau API:
    - Cherry-pick commit c25fcf5a from Mesa master.
    - Build-depend on libdrm-dev 2.4.23 or newer.
  * Use linux-any for linux-libc-dev and libudev-dev build-depends.

  [ Julien Cristau ]
  * Update from upstream 7.9 branch, commit 0ff45dd.
  * Refresh patches.

 -- Julien Cristau <jcristau@debian.org>  Tue, 04 Jan 2011 12:46:59 +0100

mesa (7.9+repack-1) experimental; urgency=low

  * Repack the upstream tarball to get rid of duplicate files which make dpkg
    choke.  Thanks to Luca Falavigna for his help diagnosing this.

 -- Julien Cristau <jcristau@debian.org>  Mon, 15 Nov 2010 23:04:45 +0100

mesa (7.9-1) experimental; urgency=low

  [ Christopher James Halse Rogers ]
  * debian/control:
    - Add EGL, GLESv1, GLESv2, and OpenVG virtual packages.  The Khronos group
      specifies a de-facto linux ABI for these libraries.  We have a similar
      package for libgl1.
  * debian/README.Debian:
    - Document the virtual packages above.

  [ Sven Joachim ]
  * Bump libdrm-dev build dependency to 2.4.21-2~, the Nouveau Gallium
    driver does not build with squeeze's libdrm-nouveau1.

  [ Julien Cristau ]
  * New upstream release.
  * Update patches:
    - 03_optional-progs-and-install.patch dropped, demos moved to a separate
      package
    - 07-nouveau-update.diff and
      09-intel-fix-invalidate-before-initialisation.diff dropped, they were
      backports from upstream
    - 04_osmesa_version.diff updated