@@ -1,0 +1,25 @@
+# Keep track of files we don't install:
+NOT_INSTALLED = \
+	dri/usr/include/GL/glfbdev.h \
+	dri/usr/include/GL/glu.h \
+	dri/usr/include/GL/glu_mangle.h \
+	dri/usr/include/GL/mesa_wgl.h \
+	dri/usr/include/GL/osmesa.h \
+	dri/usr/include/GL/vms_x_fix.h \
+	dri/usr/include/GL/wglext.h \
+	dri/usr/include/GL/wmesa.h \
+	dri/usr/lib/libGL.so \
+	dri/usr/lib/pkgconfig/gl.pc \
+	usr/include/GL/glext.h \
+	usr/include/GL/glfbdev.h \
+	usr/include/GL/gl.h \
+	usr/include/GL/gl_mangle.h \
+	usr/include/GL/GLwDrawAP.h \
+	usr/include/GL/GLwMDrawAP.h \
+	usr/include/GL/glxext.h \
+	usr/include/GL/glx.h \
+	usr/include/GL/glx_mangle.h \
+	usr/include/GL/mesa_wgl.h \
+	usr/include/GL/vms_x_fix.h \
+	usr/include/GL/wglext.h \
+	usr/include/GL/wmesa.h
